--- a/authproject/frontend/package.json
+++ b/authproject/frontend/package.json
@@ -16,11 +16,15 @@
     "gsap": "^3.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "three": "^0.178.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "vite": "^5.2.0"
   }
 }
