--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aos": "^2.3.4",
     "dotenv": "^16.5.0",
     "express": "^4.21.2"
   }
